--- a/gogogo/.settings/org.eclipse.core.resources.prefs
+++ b/gogogo/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
-encoding//src/\uD504\uB85C\uADF8\uB798\uBA38\uC2A4/LV1/\uD584\uBC84\uAC70\uB9CC\uB4E4\uAE30.java=UTF-8
+encoding//src/programmers/LV1/P133502.java=UTF-8
+encoding//src/programmers/LV1/P250121.java=UTF-8
+encoding//src/programmers/LV1/P64061.java=UTF-8
